# open-hms

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
appointments/: forms.py  models.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_initial.py  0003_appointment_created_by_alter_appointment_doctor.py  0004_appointment_duration.py
billing/: forms.py  models.py  tests.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_initial.py  0003_bill_payment_status_mpesapayment.py
core/: models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
hms_project/: settings.py  urls.py
inventory/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_category_alter_inventoryitem_options_and_more.py
mpesa_api/: __init__.py  core.py
patients/: forms.py  models.py  urls.py  views.py
patients/migrations/: 0001_initial.py
prescriptions/: models.py
prescriptions/migrations/: 0001_initial.py
templates/: base.html
templates/appointments/: appointment_detail.html  appointment_form.html  appointment_list.html  calendar.html
templates/billing/: bill_detail.html  bill_form.html  bill_list.html
templates/core/: dashboard.html  login.html  report_detail.html  report_pdf.html  reports.html
templates/inventory/: expired_items.html  inventory_confirm_delete.html  inventory_dashboard.html  inventory_detail.html  inventory_form.html  inventory_list.html  low_stock_items.html  near_expiry_items.html  stock_alerts.html  supplier_form.html  (+2 more)
(+14 files in other folders)
