[project]
name = "hms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "django-import-export>=4.3.13",
    "django-weasyprint>=2.4.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-dateutil>=2.9.0.post0",
    "reportlab>=4.4.4",
    "seaborn>=0.13.2",
    "whitenoise>=6.11.0",
]
